BRT/brt.output
Terminals unused in grammar

    T_AND


Grammar

    0 $accept: start_symbol $end

    1 start_symbol: file

    2 file: command_list
    3     | ε

    4 command_list: command_list command
    5             | command

    6 phrase: "as" "filename" phrase
    7       | "as" "executable" phrase
    8       | "with" "gcc" phrase
    9       | "with" "g++" phrase
   10       | "with" "filename" phrase
   11       | ε

   12 command: "run" "executable" phrase
   13        | "compile" filelist phrase
   14        | "move" filename "to" "destination"
   15        | "move" "executable" "to" "destination"
   16        | "quit"

   17 filelist: filename filelist
   18         | filename

   19 filename: "filename"


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "filename" <union_string> (258) 6 10 19
    "executable" <union_string> (259) 7 12 15
    "destination" <union_string> (260) 14 15
    "g++" (261) 9
    "gcc" (262) 8
    "compile" (263) 13
    "with" (264) 8 9 10
    "as" (265) 6 7
    "run" (266) 12
    "move" (267) 14 15
    "to" (268) 14 15
    "quit" (269) 16
    T_AND (270)


Nonterminals, with rules where they appear

    $accept (16)
        on left: 0
    start_symbol (17)
        on left: 1
        on right: 0
    file <union_string> (18)
        on left: 2 3
        on right: 1
    command_list (19)
        on left: 4 5
        on right: 2 4
    phrase <union_string> (20)
        on left: 6 7 8 9 10 11
        on right: 6 7 8 9 10 12 13
    command <union_string> (21)
        on left: 12 13 14 15 16
        on right: 4 5
    filelist <union_string> (22)
        on left: 17 18
        on right: 13 17
    filename <union_string> (23)
        on left: 19
        on right: 14 17 18


State 0

    0 $accept: • start_symbol $end

    "compile"  shift, and go to state 1
    "run"      shift, and go to state 2
    "move"     shift, and go to state 3
    "quit"     shift, and go to state 4

    $default  reduce using rule 3 (file)

    start_symbol  go to state 5
    file          go to state 6
    command_list  go to state 7
    command       go to state 8


State 1

   13 command: "compile" • filelist phrase

    "filename"  shift, and go to state 9

    filelist  go to state 10
    filename  go to state 11


State 2

   12 command: "run" • "executable" phrase

    "executable"  shift, and go to state 12


State 3

   14 command: "move" • filename "to" "destination"
   15        | "move" • "executable" "to" "destination"

    "filename"    shift, and go to state 9
    "executable"  shift, and go to state 13

    filename  go to state 14


State 4

   16 command: "quit" •

    $default  reduce using rule 16 (command)


State 5

    0 $accept: start_symbol • $end

    $end  shift, and go to state 15


State 6

    1 start_symbol: file •

    $default  reduce using rule 1 (start_symbol)


State 7

    2 file: command_list •
    4 command_list: command_list • command

    "compile"  shift, and go to state 1
    "run"      shift, and go to state 2
    "move"     shift, and go to state 3
    "quit"     shift, and go to state 4

    $default  reduce using rule 2 (file)

    command  go to state 16


State 8

    5 command_list: command •

    $default  reduce using rule 5 (command_list)


State 9

   19 filename: "filename" •

    $default  reduce using rule 19 (filename)


State 10

   13 command: "compile" filelist • phrase

    "with"  shift, and go to state 17
    "as"    shift, and go to state 18

    $default  reduce using rule 11 (phrase)

    phrase  go to state 19


State 11

   17 filelist: filename • filelist
   18         | filename •

    "filename"  shift, and go to state 9

    $default  reduce using rule 18 (filelist)

    filelist  go to state 20
    filename  go to state 11


State 12

   12 command: "run" "executable" • phrase

    "with"  shift, and go to state 17
    "as"    shift, and go to state 18

    $default  reduce using rule 11 (phrase)

    phrase  go to state 21


State 13

   15 command: "move" "executable" • "to" "destination"

    "to"  shift, and go to state 22


State 14

   14 command: "move" filename • "to" "destination"

    "to"  shift, and go to state 23


State 15

    0 $accept: start_symbol $end •

    $default  accept


State 16

    4 command_list: command_list command •

    $default  reduce using rule 4 (command_list)


State 17

    8 phrase: "with" • "gcc" phrase
    9       | "with" • "g++" phrase
   10       | "with" • "filename" phrase

    "filename"  shift, and go to state 24
    "g++"       shift, and go to state 25
    "gcc"       shift, and go to state 26


State 18

    6 phrase: "as" • "filename" phrase
    7       | "as" • "executable" phrase

    "filename"    shift, and go to state 27
    "executable"  shift, and go to state 28


State 19

   13 command: "compile" filelist phrase •

    $default  reduce using rule 13 (command)


State 20

   17 filelist: filename filelist •

    $default  reduce using rule 17 (filelist)


State 21

   12 command: "run" "executable" phrase •

    $default  reduce using rule 12 (command)


State 22

   15 command: "move" "executable" "to" • "destination"

    "destination"  shift, and go to state 29


State 23

   14 command: "move" filename "to" • "destination"

    "destination"  shift, and go to state 30


State 24

   10 phrase: "with" "filename" • phrase

    "with"  shift, and go to state 17
    "as"    shift, and go to state 18

    $default  reduce using rule 11 (phrase)

    phrase  go to state 31


State 25

    9 phrase: "with" "g++" • phrase

    "with"  shift, and go to state 17
    "as"    shift, and go to state 18

    $default  reduce using rule 11 (phrase)

    phrase  go to state 32


State 26

    8 phrase: "with" "gcc" • phrase

    "with"  shift, and go to state 17
    "as"    shift, and go to state 18

    $default  reduce using rule 11 (phrase)

    phrase  go to state 33


State 27

    6 phrase: "as" "filename" • phrase

    "with"  shift, and go to state 17
    "as"    shift, and go to state 18

    $default  reduce using rule 11 (phrase)

    phrase  go to state 34


State 28

    7 phrase: "as" "executable" • phrase

    "with"  shift, and go to state 17
    "as"    shift, and go to state 18

    $default  reduce using rule 11 (phrase)

    phrase  go to state 35


State 29

   15 command: "move" "executable" "to" "destination" •

    $default  reduce using rule 15 (command)


State 30

   14 command: "move" filename "to" "destination" •

    $default  reduce using rule 14 (command)


State 31

   10 phrase: "with" "filename" phrase •

    $default  reduce using rule 10 (phrase)


State 32

    9 phrase: "with" "g++" phrase •

    $default  reduce using rule 9 (phrase)


State 33

    8 phrase: "with" "gcc" phrase •

    $default  reduce using rule 8 (phrase)


State 34

    6 phrase: "as" "filename" phrase •

    $default  reduce using rule 6 (phrase)


State 35

    7 phrase: "as" "executable" phrase •

    $default  reduce using rule 7 (phrase)
